# KNOT

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/data/templates/: compliance_check.json  data_pipeline.json  ops_monitor.json
backend/src/knot/: __init__.py
backend/src/knot/api/: __init__.py  app.py  auth.py  middleware.py
backend/src/knot/api/routes/: agents.py  auth.py  knowledge.py  metrics.py  templates.py  workflows.py  ws.py
backend/src/knot/cli/: __init__.py  main.py
backend/src/knot/core/: config.py  database.py  exceptions.py  models.py  orm_models.py  repository.py  template_store.py
backend/src/knot/execution_layer/: __init__.py  base.py  plugin.py  registry.py  tool_executor.py
backend/src/knot/knowledge_layer/: __init__.py  chunker.py  conversation_memory.py  document_parser.py  embedding_pipeline.py  enhancer.py  fusion.py  keyword_search.py  retriever.py  vector_store.py
backend/src/knot/llm/: __init__.py  base.py  deepseek.py  registry.py
backend/src/knot/orchestration_layer/: __init__.py  intent.py  intent_understanding.py  multi_agent.py  planner.py  scheduler.py  state.py  workflow.py
backend/tests/: conftest.py  pytest.ini  test_auth.py  test_conversation_memory.py  test_knowledge_layer.py  test_models.py  test_repository.py  test_tools.py  test_workflow.py
deploy/: README.md  nginx.conf
docs/: ARCHITECTURE.md  BACKEND_FRAMEWORK.md  FRONTEND_FRAMEWORK.md  GOALS.md  REQUIREMENTS.md  (+1 more)
(+57 files in other folders)
