[project]
name = "knot"
version = "0.1.0"
description = "Knowledge-enhanced task Orchestration for LLM Tuning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "openai>=1.0.0",
    "pymilvus>=2.4.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30.0",
    "redis>=5.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "python-dotenv>=1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
knot = "knot.cli.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
